# learn-python-libraries

./: README.md  poetry_basics_tut.md
black_tut/: main.py  pyproject.toml
doctest_tut/: tut_1.py
logging_tut/: logging_main.py
makefile_tut/: Makefile  pyproject.toml
poetry_tut/: README.md  pyproject.toml
precommit_tut/: pyproject.toml
precommit_tut1/: .pre-commit-config.yaml  main.py  pyproject.toml
pydoc_tut/: tut_1.html
pylinit_tut/: ReadMe.md  main.py  pyproject.toml
pytest_tut/: README.md  pyproject.toml  test_functions copy.py  test_functions.py  test_group_using_mark.py
pytest_tut/pytest_tut/: functions.py
pytest_tut/src/: functions.py
pytest_tut/tests/: test_functions _basics.py  test_functions.py  test_group_using_mark.py
toml_yaml_tut/: config_toml.toml  config_yaml.yaml  main.py
version_tut/: pyproject.toml
version_tut/version_tut/: functions.py
