[tool.poetry]
name = "black-tut"
version = "0.1.0"
description = ""
authors = ["shubham Mandowara <shubham77mandowara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
