[tool.poetry]
name = "precommit-tut"
version = "0.1.0"
description = ""
authors = ["shubham Mandowara <shubham77mandowara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
